gcc errors during build radv
../mesa-9999/src/amd/vulkan/radv_device.c: In function ‘radv_queue_internal_submit’:
../mesa-9999/src/amd/vulkan/radv_device.c:4687:19: error: passing argument 9 of ‘radv_alloc_sem_info’ makes integer from pointer without a cast [-Werror=int-conversion]
4687 | 0, NULL, NULL);
| ^~~~
| |
| void *
../mesa-9999/src/amd/vulkan/radv_device.c:4163:15: note: expected ‘VkFence’ {aka ‘long long unsigned int’} but argument is of type ‘void *’
4163 | VkFence fence)
| ~~~~~~~~^~~~~
For fix that you should use VK_NULL_HANDLE instead NULL.
Also, I have the next errors:
../mesa-9999/src/amd/vulkan/radv_rgp.c:275:1: error: negative width in bit-field ‘__error_if_negative’
275 | static_assert(sizeof(struct sqtt_file_chunk_asic_info) == 720,
| ^~~~~~~~~~~~~
How to fix it I don't know, I just removed all static_assert in this file and it's working fine.
Gentoo gcc 9.2.0